# incident-agent

./: .gitignore  Dockerfile  README.md
docs/: CLAUDE_INSTRUCTIONS.md  DEMO_SCRIPT.md  PHASE0_RESEARCH.md  PHASE1_ARCHITECTURE.md  RESOURCES.md
incidentagent/: .dockerignore  .env.docker  .env.example  .gitignore  DEPLOYMENT.md  DOCKER.md  DOCKER_README.md  DOCKER_SUMMARY.md  Dockerfile  Makefile  README.md  app.yaml  config.yaml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
incidentagent/.gradient/: agent.yml
incidentagent/incidentagent/: __init__.py  main.py
incidentagent/incidentagent/agents/: __init__.py  base.py  investigator.py  remediation.py  triage.py
incidentagent/incidentagent/agents/sub_agents/: __init__.py  deploy.py  k8s.py  logs.py  memory.py  metrics.py  mock_data.py  runbook.py
incidentagent/incidentagent/api/: __init__.py  app.py  store.py
incidentagent/incidentagent/api/routes/: alerts.py  health.py  investigations.py
incidentagent/incidentagent/knowledge/: __init__.py  kb_client.py  seed_data.py
incidentagent/incidentagent/llm/: __init__.py  client.py  prompts.py
incidentagent/incidentagent/schemas/: __init__.py  alert.py  config.py  evidence.py  investigation.py  memory.py  remediation.py  root_cause.py  triage.py
incidentagent/incidentagent/ui/: __init__.py  dashboard.py
incidentagent/incidentagent/ui/components/: __init__.py  evidence_card.py  remediation_panel.py  timeline.py
incidentagent/knowledge/runbooks/: connection-pool-exhaustion.md  deployment-rollback.md  high-latency.md  oom-kills.md
incidentagent/knowledge/sample_incidents/: demo-incident.json
incidentagent/models/: __init__.py  generate_training_data.py  log_classifier.py  train_classifier.py  training_data.csv
incidentagent/scripts/: seed_kb.py  start.sh
incidentagent/tests/: eval_dataset.csv  eval_runner.py  test_guardrails.py  test_triage.py
