[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incidentagent"
version = "1.0.0"
description = "Autonomous AI agent for DevOps incident investigation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Osama", email = "osama@example.com"}
]
keywords = ["devops", "incident", "ai", "agent", "investigation", "gradient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Gradient ADK
    "gradient-adk>=0.1.0",
    
    # Data Sources
    "elasticsearch>=8.11.0",
    "prometheus-api-client>=0.5.0",
    "kubernetes>=28.1.0",
    
    # UI
    "streamlit>=1.29.0",
    
    # Reports
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
    
    # Utilities
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
incidentagent = "incidentagent.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["incidentagent*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
